# radar

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
configs/: radar.yaml
deploy/systemd/: banker-radar-daily-review.service  banker-radar-daily-review.timer  banker-radar-tracking.service  banker-radar-tracking.timer
docs/: PROJECT_CONTEXT.md
docs/plans/: 2026-04-24-v0.3-smart-money-resonance.md  2026-04-24-v0.4-signal-tracking-backtesting.md
src/banker_radar/: cli.py  config.py  models.py
src/banker_radar/alerts/: formatter.py  telegram.py
src/banker_radar/collectors/: binance_futures.py  binance_web3.py  chain.py  gmgn.py  okx_market.py  price_observer.py
src/banker_radar/engines/: accumulation.py
src/banker_radar/signals/: resonance.py  scoring.py  smart_money.py
src/banker_radar/storage/: __init__.py  postgres.py  sqlite.py
src/banker_radar/telegram/: bot.py
src/banker_radar/tracking/: direction.py  performance.py  service.py
src/banker_radar/utils/: rate_limit.py
tests/: test_accumulation.py  test_collectors_and_cli.py  test_config_env.py  test_okx_collector.py  test_postgres_only_runtime.py  test_signals.py  test_storage_and_report.py  test_telegram_v02.py  test_v03_chain_and_storage.py  test_v03_formatter_cli.py  test_v04_cli_formatter.py  test_v04_models_performance.py  test_v04_price_observer.py  test_v04_storage_and_tracking.py
