[project]
name = "banker-radar"
version = "0.4.0"
description = "庄家雷达 v0.4: contract anomaly radar + Telegram + smart-money resonance + signal tracking"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
banker-radar = "banker_radar.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
